# Recording

./: .gitignore  CHANGELOG.md  CITATION.cff  FEUP-DISS.cabal  README.md  citation.bibtex  flake.nix  fourmolu.yaml  lambda-chi-brackets.cabal  recording.cabal
.github/workflows/: main.yml
app/: Main.hs
src/: Common.hs  Errors.hs  Evaluator.hs  Lexer.hs  Main.hs  Parser.hs  Pretty.hs  Repl.hs  Terms.hs
src/Explicit/: Parser.hs  Terms.hs  TypeInference.hs  Types.hs  Typing.hs  Unification.hs
src/Implementation/: Compilation.hs  Evaluation.hs  Evaluator.hs  Terms.hs
src/Implicit/: Parser.hs  Terms.hs  TypeInference.hs  Types.hs  Unification.hs
tests/: CompilationTest.hs  EvaluationTest.hs  EvaluatorTest.hs  ImplicitParserTest.hs  LexerTest.hs  Main.hs  ParserTest.hs  Tests.hs  TypeInferenceTest.hs  UnificationTest.hs
