cabal-version:   3.0
name:            FEUP-DISS
version:         0.1.0.0
license-file:    LICENSE
author:          Eduardo Correia
maintainer:      skelozard1@gmail.com
category:        Language development
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

executable FEUP-DISS-exe
  import:           warnings
  main-is:          Main.hs
  other-modules:
    Implementation.Evaluator
    Implementation.Terms

  build-depends:
    , base    ^>=4.17.2.0
    , parsec
    , containers
    , ordered-containers

  hs-source-dirs:   src
  default-language: GHC2021

-- library FEUP-DISS-lib
--   exposed-modules:
--     Terms
--     Evaluator
--     Parser

--   build-depends:
--     , base    ^>=4.17.2.0
--     , parsec

--   hs-source-dirs:   src
--   default-language: GHC2021

-- test-suite tests
--   type:              exitcode-stdio-1.0
--   main-is:           Main.hs
--   other-modules:
--     EvaluatorTest
--     ParserTest

--   build-depends:
--     , base           ^>=4.17.2.0
--     , FEUP-DISS-lib
--     , HUnit          ^>=1.6

--   hs-source-dirs:    tests
--   default-language:  GHC2021
