cabal-version:   3.0
name:            FEUP-DISS
version:         0.1.0.0
license-file:    LICENSE
author:          Eduardo Correia
maintainer:      skelozard1@gmail.com
category:        Language development
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

executable FEUP-DISS-exe
  import:           warnings
  main-is:          Main.hs
  other-modules:
    Explicit.Parser
    Explicit.Terms
    Explicit.Types
    Implementation.Compilation
    Implementation.Evaluator
    Implementation.Terms

  build-depends:
    , base                ^>=4.17.2.0
    , containers
    , ordered-containers
    , parsec
    , mtl

  hs-source-dirs:   src
  default-language: GHC2021

library FEUP-DISS-lib
  exposed-modules:
    Explicit.Parser
    Explicit.Terms
    Explicit.Types
    Implementation.Compilation
    Implementation.Evaluator
    Implementation.Terms

  build-depends:
    , base                ^>=4.17.2.0
    , containers
    , ordered-containers
    , parsec
    , mtl

  hs-source-dirs:   src
  default-language: GHC2021

test-suite tests
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  other-modules:
    EvaluatorTest
    CompilationTest
    ParserTest

  build-depends:
    , base           ^>=4.17.2.0
    , FEUP-DISS-lib
    , HUnit          ^>=1.6
    , containers
    , ordered-containers

  hs-source-dirs:   tests
  default-language: GHC2021
