cabal-version:   3.0
name:            FEUP-DISS
version:         0.1.0.0
license-file:    LICENSE
author:          Eduardo Correia
maintainer:      skelozard1@gmail.com
category:        Language development
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

executable FEUP-DISS-exe
  import:           warnings
  main-is:          Main.hs
  other-modules:
    Explicit.Parser
    Explicit.Terms
    Explicit.Types
    Implementation.Compilation
    Implementation.Evaluator
    Implementation.Terms
    Implicit.Parser
    Implicit.Terms
    Implicit.TypeInference
    Implicit.Types
    Implicit.Unification
    Repl

  build-depends:
    , base                ^>=4.18.2.0
    , containers
    , lens
    , mtl
    , ordered-containers
    , parsec
    , split

  hs-source-dirs:   src
  default-language: GHC2021

library FEUP-DISS-lib
  exposed-modules:
    Explicit.Parser
    Explicit.Terms
    Explicit.Types
    Implementation.Compilation
    Implementation.Evaluator
    Implementation.Terms
    Implicit.Parser
    Implicit.Terms
    Implicit.TypeInference
    Implicit.Types
    Implicit.Unification

  build-depends:
    , base                ^>=4.18.2.0
    , containers
    , lens
    , mtl
    , ordered-containers
    , parsec

  hs-source-dirs:   src
  default-language: GHC2021

test-suite tests
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  other-modules:
    CompilationTest
    EvaluatorTest
    ImplicitParserTest
    ParserTest
    TypeInferenceTest

  build-depends:
    , base                ^>=4.18.2.0
    , containers
    , FEUP-DISS-lib
    , HUnit               ^>=1.6
    , ordered-containers

  hs-source-dirs:   tests
  default-language: GHC2021
