cabal-version:   3.0
name:            recording
version:         1.1.0.0
license-file:    LICENSE
maintainer:      educorreia932@gmail.com
author:          Eduardo Correia
category:        Language development
build-type:      Simple
extra-doc-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/Educorreia932/Recording

common shared-settings
  default-language: GHC2021
  build-depends:
    , base                ^>=4.18.2.0
    , containers
    , lens
    , megaparsec
    , mtl
    , ordered-containers
    , prettyprinter
    , split

library
  import:          shared-settings
  exposed-modules:
    Errors
    Explicit.Terms
    Explicit.TypeInference
    Explicit.Types
    Explicit.Typing
    Explicit.Unification
    Implementation.Compilation
    Implementation.Evaluation
    Implementation.Terms
    Implicit.Parser
    Implicit.Terms
    Pretty

  hs-source-dirs:  src

executable recording
  import:         shared-settings
  main-is:        Main.hs
  hs-source-dirs: src
  build-depends:
    repline,
    text
  other-modules:
    Errors
    Explicit.Terms
    Explicit.TypeInference
    Explicit.Types
    Explicit.Typing
    Explicit.Unification
    Implementation.Compilation
    Implementation.Evaluation
    Implementation.Terms
    Implicit.Parser
    Implicit.Terms
    Pretty
    Repl

  ghc-options:    -Wall

test-suite recording-test
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  hs-source-dirs:   tests
  other-modules:
    CompilationTest
    EvaluationTest
    ParserTest
    TypeInferenceTest
  default-language: GHC2021
  build-depends:
    , base                ^>=4.18.2.0
    , containers
    , HUnit               ^>=1.6
    , ordered-containers
    , recording
